--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <img src="">
         <h5>Isosceles</h5>
       </div>
-
+      <div class="not-triangle">
+        <img src="">
+        <h5>This does not equal a triangle</h5>
+      </div>
     </div>
   </div>
   </body>
